# bin-packing

./: Makefile.am  configure.in.in  kbinpacking.kdevelop  kbinpacking.lsm  prj.cmake  rbp.kdevelop  rbpmacro.cmake
admin/: acinclude.m4.in
doc/en/: index.docbook
kbinpacking/: CMakeLists.txt  Doxyfile  Makefile.am  kappoptions.ui  kbinpacking.cpp  kbinpacking.h  kbinpackingdoc.cpp  kbinpackingdoc.h  kbinpackingui.rc  kbinpackingview.cpp  kbinpackingview.h  kbpgaview.cpp  kbpgaview.h  kbpgaview.ui  kbpprjview.cpp  kbpprjview.h  main.cpp  qdrawgroups.cpp  qdrawgroups.h  qdrawgroups.ui
kbinpacking/kbinpacking/: kappoptions.cpp  kappoptions.h  kbinpacking.desktop  kbpprjview.ui  qdrawgroups.h
rbp/: CMakeLists.txt  Makefile.am  rbp.cpp  rbp.h  rchromobp.h  rchromobp.hh  rdatabpfile.cpp  rdatabpfile.h  rfchromobp.cpp  rfchromobp.h  rfinstbp.cpp  rfinstbp.h  rfirstfitdesheuristic.h  rfirstfitdesheuristic.hh  rgroupbp.h  rgroupbp.hh  rinstbp.h  rinstbp.hh  robjbp.cpp  robjbp.h
rbp/doc/en/: Makefile.am
rbp/rbp/: rbp.h  rbpproblem.cpp  rbpproblem.h  rchromobp.hh  rgroupbp.h  rgroupbp.hh  rinstbp.hh
