INCLUDES = -I$(top_srcdir) $(all_includes)
pkglib_LTLIBRARIES =  librbp.la
AM_CFLAGS =
AM_CXXFLAGS =
AM_FFLAGS =
SUBDIRS =
rbpincludedir = $(includedir)/r/rbp
rbpinclude_HEADERS = rbp.h rchromobp.h rchromobp.hh \
					rfirstfitdesheuristic.h rfirstfitdesheuristic.hh rgroupbp.h \
					rgroupbp.hh rinstbp.h rinstbp.hh robjbp.h \
					rfchromobp.h rfinstbp.h rdatabpfile.h
librbp_la_SOURCES = rbp.cpp robjbp.cpp rfchromobp.cpp rfinstbp.cpp \
					rdatabpfile.cpp
